--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,5 +19,6 @@ security_autoupdate_reboot: "false"
 security_autoupdate_reboot_time: "03:00"
 security_autoupdate_mail_to: ""
 security_autoupdate_mail_on_error: true
+security_autoupdate_allupdates: false
 
 security_fail2ban_enabled: true
